assets/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    --primary-color : #233832;
    --highlight-color: #13d5dc;
    --background-color: #352e22;
    --text-color: #b9c3d9;
    --font-family: "Helvetica";
}


/* Header */

header {
    background-color: var(--primary-color);
    position: fixed;
    width: 100%;
    box-shadow: 0 3px 3px 0 black;
    padding-bottom: 15px;
}

header a {
    text-decoration: none;
}

#logo {
    text-decoration: none;
    text-transform: uppercase;
    color: var(--text-color);
    font-size: 20px;
    padding-bottom: 15px;
    padding-left: 10px;
}

/* Navigation */

nav a {
    text-decoration: none;
    padding-left: 15px;
    padding-right: 20px;
    color: white;
    font-size: 20px;
}

nav a:hover {
    color: var(--highlight-color);
}

/* Main content */

body {
    background-color: var(--background-color);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
} 

.cover-text {
    background: url("../assets/images/The-Antikythera-Mechanism-main.jpg") no-repeat center center/cover;
    display: flex;
    padding-top: 50px;
    padding-bottom: 50px;
    width: 100%;
    height: 384px;
    flex-direction: column;
    justify-content: center;
    color: var(--text-color);
}

.cover-text h1 {
    background-color: rgb(0,0,0, 0.6); 
    text-align: center;
}

.mechanism {
    padding: 20px;
    color: var(--text-color);
    font-family: var(--font-family);
    font-size: 20px;
}

.mechanism h2 {
    text-align: center;
    padding-bottom: 20px; 
}

#image {
    min-width: 350px;
    min-height: 214px;
    width:100vw;
    height: 100vw;
    padding: 10px;
}

.origin {
    padding: 20px;
    color: var(--text-color);
    font-family: var(--font-family);
    font-size: 20px;
}

.origin h3 {
    text-align: center;
    padding-bottom: 20px;
}

footer {
    display: flex;
    justify-content: space-evenly;
    background-color: var(--primary-color);
    box-shadow: 0 -3px 3px 0 black;
}

footer i {
    color: var(--text-color);
    font-size: 30px;
}

/* Gallery */

.gallery {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-top: 80px;
}

.pictures img {
    width: 100%;
}

/* Sign Up */

.signup {
    background: url("../assets/images/The-Antikythera-Mechanism-main.jpg") no-repeat center center/cover;
    padding-top: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.signup form {
    background-color: rgb(0,0,0, 0.6);
    padding: 100px;
    margin-top: 200px;
    margin-bottom: 300px; 
}

.signup-btn {
    margin-top: 20px;
    margin-left: 110px;
    font-size: 15px;
}

#first-name, #last-name, #email {
    width: 100%;
    padding-bottom: 5px;
}

@media screen and (min-width: 576px ){
    
    .mechanism {
        padding-left: 20px;
        padding-right: 20px;
    }   

    .origin {
        padding-left: 20px;
        padding-right: 20px;
    }

.signup form {
    height: 476px;
    width: 476px;
}

}

@media screen and (min-width: 768px ){
    
    header  {
        display: flex;
        flex-wrap: nowrap;
        justify-content: space-between;
        padding-top: 10px;
        padding-bottom: 5px;
    }

    #logo {
        padding-bottom: 5px;
    }

    nav {
        display: flex;
        justify-content: flex-end;
    }
    
    .image {
        align-items: center;
    }

    .gallery {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        padding-top: 50px;
    }

    .pictures img {
        margin-top: 0;
        width: 49%;
    }
}

@media screen and (min-width: 992px ) {
     
    .container {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        flex-wrap: wrap;
    }

    .mechanism {
        width: 30%;
        order: 0;
        padding-left: 20px;
    }

    .fragments {
        order: 1;
        display: flex;
        align-items: center;
    }

    #image{
        width: 40vw;
        height: 30vw;
    }

    .origin {
        width: 30%;
        order: 2;
    }

     .pictures img {
        width: 33%;
    }

}

